<?xml version="1.0" encoding="UTF-8"?>
<Keyboards>
	<!--
	id := a UUID (you may want to generate this using our simple Java program at:  /trunk/project/dict_creation (uuidgen_Windows.bat or uuidgen_Linux)
	nameResId := the resource Id which holds the name of the keyboard. See strings.xml.
	layoutResId := the resource Id which holds the layout definition of this keyboard. The sample is an English QWERTY keyboard.
	*landscapeResId := the resource Id which holds the layout definition of this keyboard in landscape orientation (optional).
	*physicalKeyboardMappingResId := a physical keyboard translation definition (optional). The sample is a Russian layout.
	*iconResId := an icon to show when switching to this layout (optional).
	*defaultDictionaryLocale := a locate identifier for this keyboard. E.g., English will be en, Hebrew will be iw, etc.
	description := some text you would like to add.
	index := the sort index of this keyboard in the Settings page.
	
	* are optional.
	 -->
	<Keyboard 
	id="27c88f54-12db-4287-b856-6de99ceb927e" 
	nameResId="@string/keyboard"
	layoutResId="@xml/neo"
	landscapeResId="@xml/neo"
	iconResId="@drawable/neo"
	physicalKeyboardMappingResId="@xml/neo_phy"
	defaultDictionaryLocale="de" 
	description="neo2 keyboard"
        defaultEnabled="false"
	index="2"/>

        <Keyboard 
        id="cac18ad5-28ca-4550-839c-b92431758132" 
        nameResId="@string/keyboard_simple"
        layoutResId="@xml/neo_simple"
        landscapeResId="@xml/neo_simple"
        iconResId="@drawable/neo"
        defaultDictionaryLocale="de" 
        defaultEnabled="true"
        description="neo2 keyboard simplified for smaller screens"
        index="1"/>

	<Keyboard 
	id="33789f6f-706a-4ea8-a002-1acf52ed9c49" 
	nameResId="@string/keyboard_ssh"
	layoutResId="@xml/ssh_neo"
	landscapeResId="@xml/ssh_neo"
	iconResId="@drawable/neo"
	defaultDictionaryLocale="xx" 
	defaultEnabled="false"
	description="neo2 keyboard based with Ctr-key"
	index="3"/>
	<!-- you can add additional layouts. Just create additional Keyboard xml node. -->
		<Keyboard 
	id="607a7062-44fb-4841-aa8b-67d57208c82e" 
	nameResId="@string/keyboard_bone"
	layoutResId="@xml/bone"
	landscapeResId="@xml/bone"
	iconResId="@drawable/neo"
	defaultDictionaryLocale="de" 
	defaultEnabled="false"
	description="bone keyboard frome neo-layout project"
	index="4"/>

	<Keyboard 
	id="ca43f55d-0bd7-4035-ba94-a33e5f1942f9" 
	nameResId="@string/keyboard_ssh_bone"
	layoutResId="@xml/ssh_bone"
	landscapeResId="@xml/ssh_bone"
	iconResId="@drawable/neo"
	defaultDictionaryLocale="xx" 
	defaultEnabled="false"
	description="bone keyboard based with Ctr-key"
	index="5"/>
	
</Keyboards>
